Added mob movement, some wierd bug DCs players when a certain player entered a map for the third time

--- a/minikemsserver/MinikeMSServer.vbproj
+++ b/minikemsserver/MinikeMSServer.vbproj
@@ -96,6 +96,8 @@
     <Compile Include="Handlers\SelectCharHandler.vb" />
     <Compile Include="Handlers\PlayerLoggedinHandler.vb" />
     <Compile Include="Handlers\PlayerMovingHandler.vb" />
+    <Compile Include="Handlers\PongHandler.vb" />
+    <Compile Include="Handlers\MoveLifeHandler.vb" />
     <Compile Include="Player\AbsoluteLifeMovement.vb" />
     <Compile Include="Player\AbstractLifeMovement.vb" />
     <Compile Include="Player\ChairMovement.vb" />
